--- a/themes/material/languages/ja.yml
+++ b/themes/material/languages/ja.yml
@@ -5,16 +5,16 @@ sidebar:
 post:
     visitor: "訪問者"    
     views: "ビュー"
-    continue: "読み続けて"
+    continue: "続きを読む"
     older: "古い"
     newer: "新しい"
     private: "プライベート記事、一時的に非表示にします"
 share:
     article_rss: "記事 RSS"
-    comment_rss: "論評 RSS"
-    toTwitter: "Twitter での共有"
-    toGplus: "Google+ での共有"
-    toWeibo: "Weibo での共有"
+    comment_rss: "コメント RSS"
+    toTwitter: "Twitter で共有"
+    toGplus: "Google+ で共有"
+    toWeibo: "Weibo で共有"
 title:
     category: "カテゴリー"
     tag: "ラベル"
